# MediapipeAndKinectInferencer

./: .gitignore  .gitmodules  KinectPoseInferencer.sln  README.md  build_proto.bat  build_proto.ps1  run_inferencers.ps1
KinectPoseInferencer.Avalonia/: App.axaml  App.axaml.cs  KinectPoseInferencer.Avalonia.csproj  Program.cs  ServiceCollectionExtensions.cs  Utils.cs  app.manifest  appsettings.Development.json
KinectPoseInferencer.Avalonia/Converters/: EnumToBooleanConverter.cs
KinectPoseInferencer.Avalonia/Messages/: OperationMode.cs  (+6 more)
KinectPoseInferencer.Core/: CoreSettings.cs  FrameManager.cs  IMediaPipeConfiguration.cs  ImageWriter.cs  InputEventSender.cs  KinectDeviceController.cs  KinectPoseInferencer.Core.csproj  MediaPipeProcessManager.cs  ProjectConstants.cs  RecordDataBroker.cs  ServiceCollectionExtensions.cs  Settings.cs  SkeletonData.cs  Utils.cs
KinectPoseInferencer.RemoteControl/: KinectPoseInferencer.RemoteControl.csproj  RemoteControlOptions.cs  RemoteControlServer.cs
KinectPoseInferencer.Test/: GeometryGenerationTests.cs  HelixGeometryFactoryTests.cs  KinectPoseInferencer.Tests.csproj  PlayerVisualizerTests.cs  PointCloudAdapterTests.cs  TransformBuilderTests.cs
c#_runtime/: App.xaml  App.xaml.cs  ImageWriter.cs  InputEventSender.cs  KinectDeviceController.cs  KinectPoseInferencer.WPF.csproj  KinectPoseInferencer.csproj  KinectPoseInferencer.sln  Program.cs  ProjectConstants.cs  RecordDataBroker.cs  Utils.cs  mediapipe-and-kinect-pose-sender.sln
mediapipe_inference/: pyproject.toml
mediapipe_inference/src/: holistic_detector.py  main.py
(+241 files in other folders)
