[project]
name = "mediapipe_inference"
version = "0.1.0"
description = ""
authors = [
    {name = "EC-K"}
]
requires-python = ">=3.12"
dependencies = [
    "absl-py (==2.1.0)",
    "attrs (==24.2.0)",
    "cffi (==1.17.1)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.0)",
    "cycler (==0.12.1)",
    "flatbuffers (==24.3.25)",
    "fonttools (==4.53.1)",
    "gevent (==24.11.1)",
    "greenlet (==3.1.1)",
    "iniconfig (==2.0.0)",
    "jax (==0.4.33)",
    "jaxlib (==0.4.33)",
    "kiwisolver (==1.4.7)",
    "line-profiler (==4.2.0)",
    "matplotlib (==3.9.2)",
    "mediapipe (==0.10.14)",
    "ml-dtypes (==0.5.0)",
    "numpy (==2.1.1)",
    "opencv-contrib-python (==4.10.0.84)",
    "opencv-python (==4.10.0.84)",
    "opt-einsum (==3.3.0)",
    "packaging (==24.1)",
    "pillow (==10.4.0)",
    "pluggy (==1.5.0)",
    "protobuf (==4.25.5)",
    "pycparser (==2.22)",
    "pyparsing (==3.1.4)",
    "pytest (==8.3.4)",
    "python-dateutil (==2.9.0.post0)",
    "scipy (==1.14.1)",
    "setuptools (==75.5.0)",
    "six (==1.16.0)",
    "sounddevice (==0.5.0)",
    "zope-event (==5.0)",
    "zope-interface (==7.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
